# end-to-end-elt

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
dbt_modelling/: dbt_project.yml
dbt_modelling/fake_data_modelling/: dbt_project.yml
dbt_modelling/models/: source.yaml
dbt_modelling/models/dimension/: dim_plans.sql  dim_subscriptions.sql  dim_usages.sql  dim_users.sql  schema.yml
dbt_modelling/models/fact/: fct_subscriptions.sql  fct_usages.sql  schema.yml
dbt_modelling/models/staging/: stg_features.sql  stg_payment_methods.sql  stg_plans.sql  stg_referrals.sql  stg_regions.sql  stg_subscriptions.sql  stg_usages.sql  stg_users.sql
fake data/data_generation/: generate_payment_methods.py  generate_plan_features.py  generate_plans.py  generate_referral_sources.py  generate_regions.py  generate_subscriptions.py  generate_usage.py  generate_users.py
fake data/models/: __init__.py  models.py
fake data/pipeline/: etl_pipeline.py
faker data/: test.ipynb
fastapi/: config.py  main.py  migrate_to_railway.py  model.py  requirements.txt
fastapi/config/: config.py
fastapi/model/: model.py  schema.py
fastapi/pipeline/: migrate_to_railway.py
pipeline/: config.py  rest_athena_pipeline.py
